<resources>
    <string name="app_name">SeeKwens</string>

    <string name="join_game">Join game</string>
    <string name="new_game">Create game</string>
    <string name="game_id_hint">Exisiting game id</string>
    <string name="name_hint">Your display name</string>
    <string name="or_divider">- OR -</string>

    <string name="start_game">Start game</string>
    <string name="game_id">Game id:</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="game_joining">Joining game %1$s with name %2$s</string>
    <string name="game_created">Created game with id %1$s</string>
    <string name="show_hand">Show hand</string>
    <string name="your_turn">It\'s your turn. Pick a card!</string>
    <string name="waiting_for_turn">Waiting for other players to play.</string>
    <string name="game_quit_confirmation">Are you sure you want to quit the game</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="game_over">Game over</string>
    <string name="quit">QUIT</string>
    <string name="inspect_board">VIEW BOARD</string>
    <string name="winning_message">Someone won the game.</string>
    <string name="last_played">%1$s played %2$s</string>
    <string name="dismiss">dismiss</string>

    <string-array name="team_names">
        <item>@string/red</item>
        <item>@string/green</item>
        <item>@string/blue</item>
    </string-array>
</resources>
