<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chinmay.seekwens.Onboarding">

    <EditText
        android:id="@+id/display_name_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"/>

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_divider"
        android:padding="@dimen/paddingMedium"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/game_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_id_hint"/>

    <EditText
        android:id="@+id/display_name_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"/>

    <Button
        android:id="@+id/button_join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"/>

</LinearLayout>
